test/domains/compilerErrors/contains-rank.chpl

config const n = 1000;

var dr2 = {1..n, 1..n};
var assoc : domain(int);

writeln(dr2.contains(assoc));
