test/domains/compilerErrors/contains-rank.good
contains-rank.chpl:7: error: rank mismatch in domain.contains()
